--- a/src/style/control.css
+++ b/src/style/control.css
@@ -1,5 +1,4 @@
 .field-group-head {
-  margin-top: 8px;
   padding-left: 12px;
   display: flex;
 }
@@ -13,7 +12,6 @@
 
 .field-group-title.active {
   color: #0075ff;
-  font-weight: bold;
 }
 
 .field-group {
@@ -22,6 +20,7 @@
 }
 
 .field-item {
+  margin: 8px 0;
   padding: 8px 20px;
   display: flex;
 }
