--- a/src/style/main.css
+++ b/src/style/main.css
@@ -59,7 +59,7 @@ a:hover {
 #canvas {
   display: block;
   margin: 0 auto;
-  background-color: #153655;
+  background-color: #091d30;
   border-radius: 8px;
 }
 
