--- a/src/style/main.css
+++ b/src/style/main.css
@@ -31,9 +31,11 @@ a:hover {
   box-sizing: border-box;
 }
 
-.close {
+.bar-btn {
+  text-indent: 0;
   margin-right: 20px;
   float: right;
+  cursor: pointer;
 }
 
 .soft {
